# mailfred

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: architecture.md  diagrams.md  high_level.md
examples/: basic.rs  clean_sent_folder.rs  gmail.rs  router.rs
src/: connection.rs  connection_handler.rs  connections.rs  connector.rs  lib.rs  logger.rs  main.rs  message.rs  response.rs  router.rs  service.rs  transport.rs  transports.rs
src/connections/: imap.rs
src/router/: filters.rs  layers.rs
src/service/: mod.rs  response.rs
src/transports/: imap.rs  mod.rs  smtp.rs
src/util/: logger.rs
tests/: integration.rs  integration_transports.rs  transports.rs
