[package]
name = "mailfred"
authors = ["lemunozm <lemunozm@gmail.com>"]
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Process emails as an HTTP server"
homepage = "https://github.com/lemunozm/mailfred"
repository = "https://github.com/lemunozm/mailfred"
keywords = ["imap", "smtp", "server", "email", "service"]
categories = ["asynchronous", "email", "web-programming"]

[features]
default = ["smtp", "imap"]
full = ["smtp", "imap", "logger"]

smtp = ["dep:mail-send", "dep:mail-builder", "dep:tokio-rustls"]
imap = ["dep:imap", "dep:mail-parser", "dep:native-tls"]
logger = ["dep:fern", "dep:colored", "dep:chrono"]

[package.metadata.cargo-all-features]
denylist = ["full"] # it's just an alias, we do not want to permute over it

[dependencies]
tokio = { version = "1", features = [
  "rt",
  "macros",
  "sync",
  "time",
  "rt-multi-thread",
] }
async-trait = "0.1"
log = "0.4"
anyhow = "1"

# smtp
mail-send = { version = "0.4", optional = true }
mail-builder = { version = "0.3", optional = true }
tokio-rustls = { version = "0.24", optional = true }

# imap
imap = { version = "3.0.0-alpha.10", optional = true }
mail-parser = { version = "0.8", optional = true }
native-tls = { version = "0.2", optional = true }

# logger
fern = { version = "0.6", features = ["colored"], optional = true }
colored = { version = "2.0", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
serial_test = "2.0"

[[test]]
name = "integration_transports"
required-features = ["imap", "smtp"]

[[example]]
name = "basic"
required-features = ["imap", "smtp", "logger"]

[[example]]
name = "gmail"
required-features = ["imap", "smtp", "logger"]

[[example]]
name = "clean_sent_folder"
required-features = ["imap", "smtp", "logger"]
